# DexKit

./: .gitignore
.github/workflows/: build-native.yml
Core/: CMakeLists.txt
Core/dexkit/: beans.cpp  dex_item.cpp  dexkit.cpp
Core/dexkit/include/: beans.h  dex_item.h  dexkit.h
Core/dexkit/include/schema/: enums_generated.h  results_generated.h
build-support/linux-sysroot/: README.md  build-linux-sysroot.sh  fetch-libstdcxx-headers.sh
demo/: proguard-rules.pro
demo/src/main/java/org/luckypray/dexkit/demo/: RandomUtil.java
dexkit/src/main/cpp/: CMakeLists.txt  native-bridge.cpp
dexkit/src/main/java/org/luckypray/dexkit/: Alias.kt  DexKitBridge.kt
dexkit/src/main/java/org/luckypray/dexkit/result/: InstructionData.kt  MethodData.kt
dexkit/src/main/java/org/luckypray/dexkit/schema/: InstructionMeta.kt  InstructionMetaArrayHolder.kt  OperandType.kt
dexkit/src/test/java/org/luckypray/dexkit/: UnitTest.kt
schema/fbs/: enums.fbs  results.fbs
scripts/: build-linux-sysroot.sh
